--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
+  "type": "module",
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
     "@apollo/datasource-rest": "^5.0.2",
     "@apollo/server": "^4.4.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "eslint-config-next": "^13.1.6",
+    "express": "^4.18.2",
     "graphql": "^16.6.0",
     "next": "^13.1.6",
     "react": "^18.2.0",
