--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "^13.1.6",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "mongoose": "^6.10.0",
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
