--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "eslint-config-next": "^13.1.6",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
     "next": "^13.1.6",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
